Ficha cliente - imagen

--- a/admin/app/components/partials/navigation/navigation.html
+++ b/admin/app/components/partials/navigation/navigation.html
@@ -98,8 +98,8 @@
         <i class="fa fa-user"></i>
       </a>
     </li>
-    <li ng-class="{'active':$state.includes('perfil')}" ng-show="valores[9]">
-      <a ng-click="$state.reload();" ui-sref="perfil">
+    <li ng-class="{'active':$state.includes('mi-galeria')}" ng-show="valores[9]">
+      <a ng-click="$state.reload();" ui-sref="mi-galeria">
         <span class="nav-text">{{ 'Menu.GALERIA' | translate }}</span>
         <i class="fa fa-image"></i>
       </a>
