--- a/admin/app/components/partials/navigation/navigation.html
+++ b/admin/app/components/partials/navigation/navigation.html
@@ -104,8 +104,8 @@
         <i class="fa fa-image"></i>
       </a>
     </li>
-    <li ng-class="{'active':$state.includes('perfil')}" ng-show="valores[10]">
-      <a ng-click="$state.reload();" ui-sref="perfil">
+    <li ng-class="{'active':$state.includes('tienda')}" ng-show="valores[10]">
+      <a ng-click="$state.reload();" ui-sref="tienda">
         <span class="nav-text">{{ 'Menu.DESCARGAR' | translate }}</span>
         <i class="fa fa-shopping-cart"></i>
       </a>
