--- a/admin/assets/css/index.css
+++ b/admin/assets/css/index.css
@@ -18534,7 +18534,7 @@ html.boxed-layout {
   .login-modal .branding,
   .error-modal .branding {
     text-align: center;
-    margin: 0 0 40px; }
+    /*margin: 0 0 40px;*/ }
     .login-modal .branding .brand,
     .error-modal .branding .brand {
       font-weight: 400;
@@ -18553,7 +18553,7 @@ html.boxed-layout {
   .login-modal form .btn,
   .error-modal form .btn {
     margin-top: 30px;
-    background-color: #48b14c;
+    background-color: #1199d3;
     text-transform: uppercase;
     font-size: 14px;
     line-height: 26px;
@@ -18564,7 +18564,7 @@ html.boxed-layout {
     text-shadow: 1px 1px rgba(0, 0, 0, 0.1); }
     .login-modal form .btn:hover,
     .error-modal form .btn:hover {
-      background-color: #3e9841; }
+      background-color: #5bc0de; }
 
 .error-modal {
   width: 680px; }
