--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1973,7 +1973,7 @@
 		height: 34px;
 		border-radius: 50%;
 		margin: 5px 15px 5px 0;
-		background-color: #636b75;
+		background-color: #636b754d;
 		color: #fff;
 		font-size: 16px;
 		line-height: 34px;
@@ -6954,7 +6954,7 @@
   margin-right: -40px!important;
 }
 .mt-n {
-  margin-top: 0px			!important;
+  margin-top: 0px!important;
 }
 .mt-xs {
   margin-top: 4px!important;
@@ -7000,7 +7000,7 @@
 }
 /* Paddiing */
 .p-n {
-  padding: 0px   		 	!important;
+  padding: 0px!important;
 }
 .p-xs {
   padding: 4px!important;
