--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1973,7 +1973,7 @@
 		height: 34px;
 		border-radius: 50%;
 		margin: 5px 15px 5px 0;
-		background-color: #636b754d;
+		background-color: rgba(99, 107, 117, 0.38);
 		color: #fff;
 		font-size: 16px;
 		line-height: 34px;
