--- a/admin/app/components/partials/navigation/navigation.html
+++ b/admin/app/components/partials/navigation/navigation.html
@@ -78,6 +78,12 @@
             <i>{{ 'Menu.DESCUENTO' | translate | limitTo: 2}}</i>
           </a>
         </li>
+        <li ui-sref-active="active">
+          <a ui-sref="email">
+            <span class="nav-text">{{ 'Menu.EMAILS' | translate }}</span>
+            <i>{{ 'Menu.EMAILS' | translate | limitTo: 2}}</i>
+          </a>
+        </li>
       </ul>
     </li>
     <li ng-show="valores[7]">
