--- a/admin/app/components/partials/navigation/navigation.html
+++ b/admin/app/components/partials/navigation/navigation.html
@@ -28,19 +28,25 @@
         <i class="icon-picture icons"></i>
       </a>
     </li>
-    <li ng-class="{'active':$state.includes('seccion')}" ng-show="valores[3]">
+    <li ng-class="{'active':$state.includes('excursion')}" ng-show="valores[3]">
+      <a ng-click="$state.reload();" ui-sref="excursion">
+        <span class="nav-text">{{ 'Menu.EXCURSION' | translate }}  </span>
+        <i class="icon-event icons"></i>
+      </a>
+    </li>
+    <li ng-class="{'active':$state.includes('seccion')}" ng-show="valores[4]">
       <a ng-click="$state.reload();" ui-sref="seccion">
         <span class="nav-text">{{ 'Menu.SECCION' | translate }}  </span>
         <i class="fa fa-list-alt"></i>
       </a>
     </li>
-    <li ng-class="{'active':$state.includes('blog')}" ng-show="valores[4]">
+    <li ng-class="{'active':$state.includes('blog')}" ng-show="valores[5]">
       <a ng-click="$state.reload();" ui-sref="blog">
         <span class="nav-text">{{ 'Menu.BLOG' | translate }}  </span>
         <i class="icon-event icons"></i>
       </a>
     </li>
-    <li ng-show="valores[5]">
+    <li ng-show="valores[6]">
       <a href="javascript:;">
         <span class="nav-text">{{ 'Menu.MANTENIMIENTO' | translate }}</span>
         <i class="fa fa-columns"></i>
@@ -52,15 +58,10 @@
             <i>{{ 'Menu.IDIOMAS' | translate | limitTo: 2}}</i>
           </a>
         </li>
-        <li ui-sref-active="active">
-          <a ui-sref="sitio">
-            <span class="nav-text">{{ 'Menu.SITIOS' | translate }}</span>
-            <i>{{ 'Menu.SITIOS' | translate | limitTo: 2}}</i>
-          </a>
-        </li>
+
       </ul>
     </li>
-    <li ng-class="{'open active':$state.includes('config')}" ng-show="valores[6]">
+    <li ng-class="{'open active':$state.includes('config')}" ng-show="valores[7]">
       <a href="javascript:;">
         <span class="nav-text">{{ 'Menu.CONFIG' | translate }}</span>
         <i class="fa fa-cogs"></i>
@@ -86,7 +87,7 @@
         </li>
       </ul>
     </li>
-    <li ng-show="valores[7]">
+    <li ng-show="valores[8]">
       <a href="javascript:;">
         <span class="nav-text">{{ 'Menu.SEGURIDAD' | translate }}</span>
         <i class="fa fa-key"></i>
@@ -112,19 +113,19 @@
         </li>
       </ul>
     </li>
-    <li ng-class="{'active':$state.includes('tienda')}" ng-show="valores[10]">
+    <li ng-class="{'active':$state.includes('tienda')}" ng-show="valores[9]">
       <a ng-click="$state.reload();" ui-sref="tienda">
         <span class="nav-text">{{ 'Menu.DESCARGAR' | translate }}</span>
         <i class="fa fa-shopping-cart"></i>
       </a>
     </li>
-    <li ng-class="{'active':$state.includes('mi-galeria')}" ng-show="valores[9]">
+    <li ng-class="{'active':$state.includes('mi-galeria')}" ng-show="valores[10]">
       <a ng-click="$state.reload();" ui-sref="mi-galeria">
         <span class="nav-text">{{ 'Menu.GALERIA' | translate }}</span>
         <i class="fa fa-image"></i>
       </a>
     </li>
-    <li ng-class="{'active':$state.includes('perfil')}" ng-show="valores[8]">
+    <li ng-class="{'active':$state.includes('perfil')}" ng-show="valores[11]">
       <a ng-click="$state.reload();" ui-sref="perfil">
         <span class="nav-text">{{ 'Menu.PERFIL' | translate }}</span>
         <i class="fa fa-user"></i>
