--- a/templates/slider.tpl.html
+++ b/templates/slider.tpl.html
@@ -1,41 +1,47 @@
-<ul data-ng-style="{'max-width':'1920px'}">
+<ul data-ng-style="{'max-width':'5120px'}">
   <!-- SLIDE  -->
-  <li
-    data-index="rs-1255"
+  <li ng-repeat="slide in slides"
+    data-index="rs-{{slide.idbanner}}"
     data-transition="fade"
     data-easein="default"
     data-easeout="default"
-    data-thumb="uploads/banners/SLIDER/bg-slide-1.jpg"
-    data-title="Caribbean"
+    data-thumb=""
+    data-title="{{slide.titulo}}"
     data-description="">
 
     <!-- MAIN IMAGE -->
     <img
-      src="uploads/banners/SLIDER/bg-slide-1.jpg"
+      ng-src="{{slide.imagen}}"
       alt=""
-      width="1920"
+      width="5120"
       height="1280"
-      data-bgposition="center top"
+      data-bgposition="center center"
       data-bgfit="cover"
+
       data-bgrepeat="no-repeat"
       data-kenburns="on"
       data-duration="10000" data-scalestart="100" data-scaleend="120"
+      data-offsetstart = "{{slide.data_offset_start}}"
+      data-offsetend = "{{slide.data_offset_end}}"
+
       data-ease="Power4.easeInOut"
       data-bgparallax="10"
       class="rev-slidebg"
       data-no-retina>
 
     <!-- LAYER NR. 1 -->
-    <a class="tp-caption News-Title tp-resizeme rs-parallaxlevel-0"
-      data-ui-sref="frontPage.services.spc"
-      id="slide-1255-layer-1"
-      data-x="['left','left','left','left']"
-      data-hoffset="['80','80','40','40']"
-      data-y="['top','top','top','top']"
-      data-voffset="['450','450','250','150']"
-      data-width="364"
-      data-height="133"
+    <a ng-if="slide.acepta_texto == 1 " class="tp-caption News-Title tp-resizeme rs-parallaxlevel-0"
+      data-ui-sref=""
+      id="slide-{{slide.idbanner}}-layer-1"
+      data-x="['{{slide.capas[0].data_x}}','{{slide.capas[0].data_x}}','{{slide.capas[0].data_x}}','{{slide.capas[0].data_x}}']"
+      data-hoffset="['{{slide.capas[0].offset_horizontal}}','{{slide.capas[0].offset_horizontal}}','{{slide.capas[0].offset_horizontal}}','{{slide.capas[0].offset_horizontal}}']"
+      data-y="['{{slide.capas[0].data_y}}','{{slide.capas[0].data_y}}','{{slide.capas[0].data_y}}','{{slide.capas[0].data_y}}']"
+      data-voffset="['{{slide.capas[0].offset_vertical}}','{{slide.capas[0].offset_vertical2}}','{{slide.capas[0].offset_vertical3}}','{{slide.capas[0].offset_vertical4}}']"
+      data-width="['{{slide.capas[0].data_width}}px','{{slide.capas[0].data_width2}}px','{{slide.capas[0].data_width3}}px','{{slide.capas[0].data_width4}}px']"
+      data-height="['auto']"
       data-whitespace="normal"
+      data-fontsize="['{{slide.capas[0].fontsize}}', '{{slide.capas[0].fontsize2}}', '{{slide.capas[0].fontsize3}}', '{{slide.capas[0].fontsize4}}']"
+      data-lineheight="['{{slide.capas[0].line_height}}', '{{slide.capas[0].line_height2}}', '{{slide.capas[0].line_height3}}', '{{slide.capas[0].line_height4}}']"
       data-transform_idle="o:1;"
       data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
       data-transform_out="y:[100%];s:1000;s:1000;"
@@ -47,37 +53,38 @@
       data-responsive_offset="on"
       data-ng-style="{
       'z-index':'5',
-      'min-width':'364px',
-      'min-height':'133px',
+      'min-width':'auto',
+      'min-height':'auto',
       'white-space':'normal',
-      'max-width':'364px',
-      'max-height':'133px',
-      'font-size':'70px',
-      'line-height':'60px',
+      'max-width':'auto',
+      'max-height':'auto',
+
+      'line-height':'{{slide.capas[0].line_height}}px',
       'font-weight':'400',
-      'color':'rgba(255, 255, 255, 1.00)',
+      'color':'{{slide.capas[0].color}}',
       'font-family':'Roboto Slab',
       'padding':'0 0 0 0',
       'border-radius':'0 0 0 0'
       }">
-      Caribbean
-      PhotoStudio
+      {{slide.capas[0].texto}}
     </a>
 
     <!-- LAYER NR. 2 -->
 
 
     <!-- LAYER NR. 3 -->
-    <a class="tp-caption News-Subtitle tp-resizeme rs-parallaxlevel-0"
-      data-ui-sref="frontPage.services.spc"
-      id="slide-1255-layer-3"
-      data-x="['left','left','left','left']"
-      data-hoffset="['81','81','41','41']"
-      data-y="['top','top','top','top']"
-      data-voffset="['605','605','401','301']"
-      data-width="none"
+    <a ng-if="slide.acepta_texto == 1 " class="tp-caption News-Subtitle tp-resizeme rs-parallaxlevel-0"
+      data-ui-sref=""
+      id="slide-{{slide.idbanner}}-layer-3"
+      data-x="['{{slide.capas[1].data_x}}','{{slide.capas[1].data_x}}','{{slide.capas[1].data_x}}','{{slide.capas[1].data_x}}']"
+      data-hoffset="[{{slide.capas[1].offset_horizontal}}]"
+      data-y="['{{slide.capas[1].data_y}}','{{slide.capas[1].data_y}}','{{slide.capas[1].data_y}}','{{slide.capas[1].data_y}}']"
+      data-voffset="['{{slide.capas[1].offset_vertical}}','{{slide.capas[1].offset_vertical2}}','{{slide.capas[1].offset_vertical3}}','{{slide.capas[1].offset_vertical4}}']"
+      data-width="['{{slide.capas[1].data_width}}px','{{slide.capas[1].data_width2}}px','{{slide.capas[1].data_width3}}px','{{slide.capas[1].data_width4}}px']"
       data-height="none"
-      data-whitespace="nowrap"
+      data-whitespace="normal"
+      data-fontsize="['{{slide.capas[1].fontsize}}', '{{slide.capas[1].fontsize2}}', '{{slide.capas[1].fontsize3}}', '{{slide.capas[1].fontsize4}}']"
+      data-lineheight="['{{slide.capas[1].line_height}}', '{{slide.capas[1].line_height2}}', '{{slide.capas[1].line_height3}}', '{{slide.capas[1].line_height4}}']"
       data-transform_idle="o:1;"
       data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power3.easeInOut;"
       data-style_hover="c:rgba(255, 255, 255, 0.65);br:0 0 0px 0;cursor:pointer;"
@@ -93,24 +100,24 @@
       'z-index':'7',
       'min-width':'auto',
       'min-height':'auto',
-      'white-space':'nowrap',
+      'white-space':'normal',
       'max-width':'auto',
       'max-height':'auto',
-      'font-size':'15px',
-      'line-height':'24px',
+      'font-size':'{{slide.capas[1].fontsize}}px',
+      'line-height':'{{slide.capas[1].line_height}}px',
       'font-weight':'300',
-      'color':'rgba(255, 255, 255, 1.00)',
+      'color':'{{slide.capas[1].color}}',
       'font-family':'Roboto Slab',
       'background-color':'rgba(255, 255, 255, 0)',
       'padding':'0 0 0 0',
       'border-radius':'0 0 0 0'
       }">
-      Balance SharePoint & Your Business to reach new heights
+      {{slide.capas[1].texto}}
     </a>
 
     <!-- LAYER NR. 4 -->
-    <div class="tp-caption - tp-resizeme rs-parallaxlevel-0"
-      id="slide-1255-layer-4"
+    <div ng-show="false" class="tp-caption - tp-resizeme rs-parallaxlevel-0"
+      id="slide-{{slide.idbanner}}-layer-4"
       data-x="['left','left','left','left']"
       data-hoffset="['463','463','443','443']"
       data-y="['top','top','top','top']"
@@ -145,152 +152,6 @@
     </div>
   </li>
 
-  <!-- SLIDE  -->
-  <li
-    data-index="rs-1103"
-    data-transition="fade"
-    data-slotamount="7"
-    data-easein="default"
-    data-easeout="default"
-    data-masterspeed="1500"
-    data-thumb=""
-    data-rotate="0"
-    data-saveperformance="off"
-    data-title="Web Solutions"
-    data-description="">
 
-    <!-- MAIN IMAGE -->
-    <img
-      src="uploads/banners/SLIDER/bg-slide-2.jpg"
-      alt=""
-      width="1920"
-      height="1280"
-      data-bgposition="center bottom"
-      data-bgfit="cover"
-      data-bgrepeat="no-repeat"
-      data-kenburns="on"
-      data-duration="10000" data-scalestart="100" data-scaleend="120"
-      data-ease="Power3.easeInOut"
-      data-bgparallax="10"
-      class="rev-slidebg"
-      data-no-retina>
-
-    <!-- LAYER NR. 1 -->
-    <a class="tp-caption News-Title tp-resizeme rs-parallaxlevel-0"
-      data-ui-sref="frontPage.services.csc"
-      id="slide-1103-layer-1"
-      data-x="['left','left','left','left']"
-      data-hoffset="['80','80','40','40']"
-      data-y="['top','top','top','top']"
-      data-voffset="['450','450','250','150']"
-      data-width="364"
-      data-height="133"
-      data-whitespace="normal"
-      data-transform_idle="o:1;"
-      data-transform_in="y:[100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
-      data-transform_out="y:[100%];s:1000;s:1000;"
-      data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-      data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-      data-start="500"
-      data-splitin="none"
-      data-splitout="none"
-      data-responsive_offset="on"
-      data-ng-style="{
-      'z-index':'5',
-      'min-width':'364px',
-      'min-height':'133px',
-      'white-space':'normal',
-      'max-width':'364px',
-      'max-height':'133px',
-      'font-size':'70px',
-      'line-height':'60px',
-      'font-weight':'400',
-      'color':'rgba(255, 255, 255, 1.00)',
-      'font-family':'Roboto Slab',
-      'padding':'0 0 0 0',
-      'border-radius':'0 0 0 0'
-      }">
-      Websites &
-      Solutions
-    </a>
-
-    <!-- LAYER NR. 2 -->
-
-
-    <!-- LAYER NR. 3 -->
-    <a class="tp-caption News-Subtitle tp-resizeme rs-parallaxlevel-0"
-      data-ui-sref="frontPage.services.csc"
-      id="slide-1103-layer-3"
-      data-x="['left','left','left','left']"
-      data-hoffset="['81','81','41','41']"
-      data-y="['top','top','top','top']"
-      data-voffset="['605','605','401','301']"
-      data-width="none"
-      data-height="none"
-      data-whitespace="nowrap"
-      data-transform_idle="o:1;"
-      data-transform_hover="o:1;rX:0;rY:0;rZ:0;z:0;s:300;e:Power3.easeInOut;"
-      data-style_hover="c:rgba(255, 255, 255, 0.65);br:0 0 0px 0;cursor:pointer;"
-      data-transform_in="y:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
-      data-transform_out="y:[100%];s:1000;s:1000;"
-      data-mask_in="x:0px;y:0px;"
-      data-mask_out="x:inherit;y:inherit;"
-      data-start="500"
-      data-splitin="none"
-      data-splitout="none"
-      data-responsive_offset="on"
-      data-ng-style="{
-      'z-index':'7',
-      'min-width':'auto',
-      'min-height':'auto',
-      'white-space':'nowrap',
-      'max-width':'auto',
-      'max-height':'auto',
-      'font-size':'15px',
-      'line-height':'24px',
-      'font-weight':'300',
-      'color':'rgba(255, 255, 255, 1.00)',
-      'font-family':'Roboto Slab',
-      'background-color':'rgba(255, 255, 255, 0)',
-      'padding':'0 0 0 0',
-      'border-radius':'0 0 0 0'
-      }">
-      Provide unforgettable experiences to your users
-    </a>
-
-    <!-- LAYER NR. 4 -->
-    <div class="tp-caption - tp-resizeme rs-parallaxlevel-0"
-      id="slide-1103-layer-4"
-      data-x="['left','left','left','left']" data-hoffset="['423','423','383','383']"
-      data-y="['top','top','top','top']" data-voffset="['607','607','403','303']"
-      data-width="none"
-      data-height="none"
-      data-whitespace="nowrap"
-      data-transform_idle="o:1;"
-      data-transform_in="x:[-100%];z:0;rX:0deg;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;s:1500;e:Power3.easeInOut;"
-      data-transform_out="x:[100%];s:1000;e:Power3.easeInOut;s:1000;e:Power3.easeInOut;"
-      data-mask_in="x:0px;y:0px;s:inherit;e:inherit;"
-      data-mask_out="x:inherit;y:inherit;s:inherit;e:inherit;"
-      data-start="500"
-      data-splitin="none"
-      data-splitout="none"
-      data-responsive_offset="on"
-      data-ng-style="{
-      'z-index':'8',
-      'min-width':'auto',
-      'min-height':'auto',
-      'white-space':'nowrap',
-      'max-width':'auto',
-      'max-height':'auto',
-      'font-size':'20px',
-      'line-height':'22px',
-      'font-weight':'400',
-      'color':'rgba(0, 210, 255, 1.00)',
-      'padding':'0 0 0 0',
-      'border-radius':'0 0 0 0'
-      }">
-      <i class="fa fa-caret-right"></i>
-    </div>
-  </li>
 </ul>
 <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
