--- a/templates/seccion/servicios.html
+++ b/templates/seccion/servicios.html
@@ -75,10 +75,11 @@
 					<div class="col-sm-6" ng-repeat="item in seccionWeb[2].contenedor[1].fichas">
 						<div class="service-box style-4 wow fadeIn" style="height: 180px;">
 							<i class="{{item.clase}}"></i>
-							<h6 style="color: #FFF">{{item.titulo}}</h6>
+							<h6 style="color: #FFF"><a href="#ficha{{::item.idficha}}" fancybox >{{::item.titulo}}</a></h6>
 							<div class="service-box-content">
 								{{item.descripcion}}
 							</div><!-- service-box-content -->
+							<div id="ficha{{::item.idficha}}" style="display:none;width:100%;" ng-include="'templates/popups/modal.php'"></div>
 						</div><!-- service-box -->
 					</div><!-- col -->
 				</div><!-- row -->
